--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "axios": "^1.1.3",
     "create-markup": "^1.0.0",
     "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.5"
+    "notiflix": "^3.2.5",
+    "simple-load-more": "^1.6.2"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
