--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "create-markup": "^1.0.0",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.5",
-    "simple-load-more": "^1.6.2"
+    "simple-load-more": "^1.6.2",
+    "simplelightbox": "^2.10.4"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
