--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "create-markup": "^1.0.0",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.5",
+    "react-scroll": "^1.8.7",
     "simple-load-more": "^1.6.2",
     "simplelightbox": "^2.10.4"
   },
